--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 # .github/workflows/release.yaml
 
 on: 
-  release:
-    types: [created]
+  push:
+#   release:
+#     types: [created]
 
 jobs:
   releases-matrix:
@@ -26,12 +27,11 @@ jobs:
         GOOS=darwin GOARCH=amd64 go build -o ../goreleases/darwin_amd64
       
     - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
-        working-directory: ../goreleases
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./*
-          tag: ${{ github.ref }}
-          overwrite: true
-          file_glob: true
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: ../goreleases/*
+        tag: ${{ github.ref }}
+        overwrite: true
+        file_glob: true
 
